kubernetes/apps/envoy-gateway/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: internal-gateway-policy
  namespace: envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: internal
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.10.0/24
        - cidr: 192.168.4.2/32
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gateway-helm
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: observability
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: tinyauth
            io.kubernetes.pod.namespace: security
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: filebrowser
            io.kubernetes.pod.namespace: selfhosted
      toPorts:
        - ports:
            - port: "10443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-gateway-policy
  namespace: envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      gateway.networking.k8s.io/gateway-name: external
  ingress:
    - fromCIDRSet:
        - cidr: 192.168.10.0/24
        - cidr: 192.168.4.2/32
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gateway-helm
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: cloudflared
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gateway-helm-xds-policy
  namespace: envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-helm
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: envoy-gateway
      toPorts:
        - ports:
            - port: "18000"
              protocol: TCP
